[package]
name = "chat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10", features = [ "full" ] }
log = "0.4.0"
env_logger = "0.8.4"
rmp-serde = "0.15.5"
serde = { version = "1.0.117", features = [ "derive" ] }
